@@ -1,22 +1,6 @@
 #textdomain wesnoth
 {themes/}
 
-# This check has to be done early, so USE_L3_OUTLAWS can affect the 
-# advancement trees of the core units.
-
-#ifdef CAMPAIGN_LIBERTY
-#define USE_L3_OUTLAWS
-#enddef
-#endif
-#ifdef CAMPAIGN_NORTHERN_REBIRTH
-#define USE_L3_OUTLAWS
-#enddef
-#endif
-#ifdef CAMPAIGN_THE_RISE_OF_WESNOTH
-#define USE_L3_OUTLAWS
-#enddef
-#endif
-
 {core/}
 
 #The editor needs the multiplayer included since the random maps are defined there
