@@ -7,6 +7,7 @@
     #textdomain wesnoth-trow
     name= _ "The Rise of Wesnoth"
     define=CAMPAIGN_THE_RISE_OF_WESNOTH
+    extra_defines=USE_L3_OUTLAWS
     first_scenario=A_Summer_of_Storms
     difficulties=EASY,NORMAL,HARD
     difficulty_descriptions={MENU_IMG_TXT2 TRoW_difficulty_easy.png _"Fighter" _"(Easy)"} +
