@@ -14,6 +14,8 @@ Version 1.3.6+svn:
    * Enable "Save Game" and "View Chat Log" menu entries in replay mode.
  * WML engine:
    * now [base_unit]id= inside [unit] can extend upon existing unit types
+   * new extra_defines key to define in campaigns some other preprocessor
+     symbol *before* the files are repreprocessed
  * miscellaneous and bug fixes
    * rewrote the config merge routine (should improve parse time slightly)
    * various code cleanups
